Add get_user_by_facebook_id and get_user_by_google_id
